fixed the overflow property by fixing tghe background height to min height. then added padding also fixed the min screen for resume

--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -1,5 +1,6 @@
 .container-custom {
     padding-top: 100px;
+    padding-bottom: 40px;
 }
 .heading {
     padding-top: 25px;
@@ -10,12 +11,10 @@
     background-color:  rgba(44, 146, 241, 0.8);
     text-align: center;
     max-width: 1100px;
-    max-height: 600px;
     margin-left: 35%;
     margin-right: auto;
-    padding-bottom: 40px;
-    overflow-y: scroll;
-    border-radius: 25px;
+    padding-bottom: 30px;
+
 }
 .col-lg-3 {
     margin-left: 16px;
